# ChangeLog for net-im/kadu-history
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.0.2.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl> -kadu-history-0.6.0.ebuild:
  Removed cruft.

  05 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-history-0.6.0.1.ebuild:
  Bumped.
