@@ -1,5 +1,3 @@
-DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
-EBUILD kadu-history-0.6.0.1.ebuild 213 RMD160 1d1471950366633d03f811be8a582df19e4e95b8 SHA1 33cdc27411293c74fc6c4c7910a5aad630096762 SHA256 745bfed0284ad2b7cc58f0b708d74710db0fabd890ad607e84e4034ebfa9e2de
 EBUILD kadu-history-0.6.0.2.ebuild 213 RMD160 1d1471950366633d03f811be8a582df19e4e95b8 SHA1 33cdc27411293c74fc6c4c7910a5aad630096762 SHA256 745bfed0284ad2b7cc58f0b708d74710db0fabd890ad607e84e4034ebfa9e2de
-MISC ChangeLog 399 RMD160 11b9bb78bc686e3c34b190614d2b261882d7859f SHA1 ac58da354c04875f7c0f3475d56e1083c531cbb9 SHA256 7d6baf82c06365f7b6cda7d58c8638b3af66fa4c5b0bfde703ba8e4d987dec55
+MISC ChangeLog 498 RMD160 b2735495e49963f7c610f7175f4753d7edb1ade2 SHA1 89f4f2871f3769ae9042299db42cef834cda42b8 SHA256 facee92ff6e9f2619304e4723061b9fea90bd173cec32d91f327165af128430b
