@@ -1,6 +1,0 @@
-inherit kadu-module
-
-SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
-DESCRIPTION="Kadu module for storing and viewing message and status history"
-HOMEPAGE="http://kadu.net"
-KEYWORDS="amd64 x86"
